fixed text spacing on mobile in view

--- a/src/components/View.css
+++ b/src/components/View.css
@@ -61,7 +61,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 500px;
+    height: auto;
     width: 90%;
     background: white;
     box-shadow:  9px 9px 18px #ababab,
@@ -74,6 +74,7 @@
     font-family: "JFS";
     font-size: 15px;
     line-height: 2;
+    padding: 10px 0 50px 0;
     
 }
 
@@ -81,6 +82,7 @@
     position: absolute;
     right: 15px;
     bottom: 10px;
+    color: #888;
 }
 /*
  *  SCROLL BAR 
@@ -183,6 +185,7 @@
         margin: 0;
     }
     .poem-text {
+        padding: 0;
         padding-right: 10%;
         height: 80%;
         overflow-y: scroll;
